Fixed spacing between header and content

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -373,8 +373,7 @@ https://stackoverflow.com/questions/39718512/put-footer-at-the-bottom-html-relat
 }
 
 .faq_main {
-  background-image: url("../images/faq_background.png");
-  background-size: 100vw;
+  margin-top: -35vh;
   height: 100vh;
   width: 100%;
   background-repeat: no-repeat;
@@ -390,7 +389,6 @@ https://stackoverflow.com/questions/39718512/put-footer-at-the-bottom-html-relat
 }
 
 .faq_content {
-  margin-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
